# tfc-exes

./: Cargo.toml
ethercat/: Cargo.toml
ethercat/src/: main.rs
ethercat/src/devices/: CiA402.rs  device.rs  device_trait.rs  mod.rs
ethercat/src/devices/beckhoff/: el1xxx.rs  el3356.rs
ethercat/src/devices/lenze/: i550.rs
