[workspace]
members = [
    "ethercat",
    "operations",
    "signal_source",
]

[workspace.dependencies]
log = "0.4.22"
schemars = "0.8.21"
serde = "1.0.210"
smlang = { version = "0.8.0", features = ["graphviz"] }
tfc = { git = "https://github.com/centroid-is/tfc.git", branch = "main", commit = "803e16c51da1ffd1d1226a088c00ad2c7aafff33" }
# tfc = { path = "../framework-rs", features = ["s3x-legacy-naming"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "tracing"] }
zbus = "4.4.0"
futures = "0.3.31"
futures-channel = "0.3.31"
