[package]
name = "tfc-ethercat"
version = "2024.11.0"
authors = ["Centroid <centroid@centroid.is>"]
edition = "2021"
description = "TFC ethercat service"
readme = "README.md"
repository = "https://github.com/centroid-is/tfc-exes"
homepage = "https://centroid.is"
keywords = ["tfc", "centroid", "framework", "dbus"]
categories = ["Development", "System", "Framework"]
license = "MIT"

[dependencies]
log = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
tfc = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
arrayvec = "0.7.6"
async-trait = "0.1.83"
atomic_refcell = "0.1.13"
bitvec = "1.0.1"
console-subscriber = "0.4.1"
derive_more = { version = "1.0.0", features = ["display"] }
ethercrab = "0.5.0"
futures = "0.3.30"
futures-channel = "0.3.30"
tracing = "0.1.40"

[[bin]]
name = "ethercat"
path = "src/main.rs"

[features]
default = ["dbus-expose"]
dbus-expose = []
opcua-expose = []
